--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".HalamanRegistrsiDokterActivity"
+            android:label="@string/title_activity_halaman_registrsi_dokter" >
+        </activity>
     </application>
 
 </manifest>
