--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
             android:name=".RegistrasiDOkterActivity"
             android:label="@string/title_activity_registrasi_dokter" >
         </activity>
+        <activity
+            android:name=".registrasiKlinikActivity"
+            android:label="@string/title_activity_registrasi_klinik" >
+        </activity>
     </application>
 
 </manifest>
