--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.google.android.gms:play-services:7.3.0'
     compile project(path: ':backend', configuration: 'android-endpoints')
+    compile project(':backend')
 }
