--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="id.ac.unsyiah.elektro.mobile.rekammedik" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="com.example.gcm.permission.C2D_MESSAGE" />
 
     <permission
         android:name="com.example.gcm.permission.C2D_MESSAGE"
-        android:protectionLevel="signature" />
+        android:protectionLevel="signature">
+    </permission>
 
-    <uses-permission android:name="com.example.gcm.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
@@ -23,7 +26,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -44,14 +46,6 @@
             android:label="@string/title_activity_pemilihan_jadwal_sukses" >
         </activity>
         <activity
-<<<<<<< HEAD
-            android:name=".RegistrasiKlinik"
-            android:label="@string/title_activity_registrasi_klinik" >
-        </activity>
-        <activity
-            android:name=".RegistrasiPasien"
-            android:label="@string/title_activity_registrasi_pasien" >
-=======
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" >
         </activity>
@@ -62,8 +56,6 @@
         <activity
             android:name=".ListDokterActivity"
             android:label="@string/title_activity_list_dokter" >
->>>>>>> master
         </activity>
     </application>
-
 </manifest>
